5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4488/executions/1573_1330.log
== SUBMITION (2019-04-01 15:04:13) 
-- CODE:
print(round(250, 6))
-- EXECUTION TIME:
0.282759
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
250
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:08:31) 
-- CODE:
x=250,0
print(round(x, 1))
print(round(x, 2))
print(round(x, 3))
print(round(x, 6))
print(round(x, 0))
-- EXECUTION TIME:
0.203655
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 2, in <module>
    print(round(x, 1))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:08:35) 
-- CODE:
x=250,0
print(round(x, 1))
print(round(x, 2))
print(round(x, 3))
print(round(x, 6))
print(round(x, 0))
-- EXECUTION TIME:
0.192769
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 2, in <module>
    print(round(x, 1))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:08:36) 
-- CODE:
x=250,0
print(round(x, 1))
print(round(x, 2))
print(round(x, 3))
print(round(x, 6))
print(round(x, 0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(x, 1))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:09:12) 
-- CODE:
x=250,0
print(round(x, 1))
print(round(x, 2))
print(round(x, 3))
print(round(x, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(x, 1))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:09:32) 
-- CODE:
x=250,0
print(round(x, 2))
print(round(x, 3))
print(round(x, 6))
print(round(x, 0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(x, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:12:40) 
-- CODE:
x=250,0
print(round(250,1))
print(round(250, 2))
print(round(250, 3))
print(round(250, 6))
print(round(250, 0))
-- OUTPUT:
250
250
250
250
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:12:45) 
-- CODE:
x=250,0
print(round(250,1))
print(round(250, 2))
print(round(250, 3))
print(round(250, 6))
print(round(250, 0))
-- OUTPUT:
250
250
250
250
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:12:53) 
-- CODE:
x=250,0
print(round(250,1))
print(round(250, 2))
print(round(250, 3))
print(round(250, 6))
print(round(250, 0))
-- EXECUTION TIME:
0.159032
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
250
250
250
250
250
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:12:56) 
-- CODE:
x=250,0
print(round(250,1))
print(round(250, 2))
print(round(250, 3))
print(round(250, 6))
print(round(250, 0))
-- OUTPUT:
250
250
250
250
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:12:57) 
-- CODE:
x=250,0
print(round(250,1))
print(round(250, 2))
print(round(250, 3))
print(round(250, 6))
print(round(250, 0))
-- EXECUTION TIME:
0.202669
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
250
250
250
250
250
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:05) 
-- CODE:
x=250,0
print(round(250, 1))
print(round(250, 2))
print(round(250, 3))
print(round(250, 6))
print(round(250, 0))
-- OUTPUT:
250
250
250
250
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:13:08) 
-- CODE:
x=250,0
print(round(250, 1))
print(round(250, 2))
print(round(250, 3))
print(round(250, 6))
print(round(250, 0))
-- EXECUTION TIME:
0.150093
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
250
250
250
250
250
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:10) 
-- CODE:
x=250,0
print(round(250, 1))
print(round(250, 2))
print(round(250, 3))
print(round(250, 6))
print(round(250, 0))
-- OUTPUT:
250
250
250
250
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:28) 
-- CODE:
x=250,0
print(round(x, 250))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(x, 250))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:42) 
-- CODE:
x=250,0
print(round(250, 6))

-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:13:43) 
-- CODE:
x=250,0
print(round(250, 6))

-- EXECUTION TIME:
0.191342
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
250
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:44) 
-- CODE:
x=250,0
print(round(250, 6))

-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:54) 
-- CODE:
print(round(250, 6))

-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:13:55) 
-- CODE:
print(round(250, 6))

-- EXECUTION TIME:
0.144662
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
250
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:56) 
-- CODE:
print(round(250, 6))

-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:14:33) 
-- CODE:
print(round(250/6, 2)

-- ERROR:
File "XXXX", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:14:35) 
-- CODE:
print(round(250/6, 2)

-- EXECUTION TIME:
0.18741
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:15:04) 
-- CODE:
print(round(250/6,2))

-- EXECUTION TIME:
0.187919
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
